--- a/ansible/files/nginx.conf.j2
+++ b/ansible/files/nginx.conf.j2
@@ -1,8 +1,8 @@
 server {
-       listen 80;
+       listen {{ nginx_port }};
        root /var/www/html;
        index index.php index.html index.htm index.nginx-debian.html;
-       server_name test.local.com;
+       server_name {{ server_name }};
 
        location / {
                try_files $uri $uri/ =404;
